fix: cor contraste no amarelo

--- a/polen/themes/polen/assets/scss/_forms.scss
+++ b/polen/themes/polen/assets/scss/_forms.scss
@@ -506,7 +506,7 @@ textarea {
 .mdc-button {
   width: 100%;
   --mdc-theme-primary: var(--primary);
-  --mdc-theme-on-primary: var(--light);
+  --mdc-theme-on-primary: var(--dark);
   --mdc-shape-small: 8px;
   --mdc-typography-button-font-size: 1rem;
   --mdc-typography-button-font-weight: 600;
