--- a/polen/themes/polen/assets/scss/_header.scss
+++ b/polen/themes/polen/assets/scss/_header.scss
@@ -182,7 +182,7 @@
     span {
       font-size: 24px;
       font-weight: 500;
-      color: var(--light);
+      color: var(--dark);
     }
   }
 }
